Corrigida lógica de seleção de empresa. Corrigido redirecionamento em ForgotPasswordView.